--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>projcet html</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hello world!!</h1>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus fugit dolor
+      nesciunt minus ullam ipsum? Corrupti sequi, voluptatibus nulla incidunt
+      eos voluptatem nihil, perferendis, perspiciatis saepe dolor commodi
+      reiciendis vero?
+    </p>
+  </body>
 </html>
