added a paragraph and a new link

--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
       reiciendis vero?
     </p>
     <a href="#">Read more...</a>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus fugit dolor
+      nesciunt minus ullam ipsum? Corrupti sequi, voluptatibus nulla incidunt
+      eos voluptatem nihil, perferendis, perspiciatis saepe dolor commodi
+      reiciendis vero?
+    </p>
+    <a href="#">Read more...</a>
   </body>
 </html>
