edited the photo info

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       reiciendis vero?
     </p>
     <a href="#">Read more...</a>
-    <img src="1.jpg">
+    <br />
+    <img src="./1.jpg" alt="a photo by Lyna Ifrah" width="325" />
   </body>
 </html>
